--- a/Q2.ipynb
+++ b/Q2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,25 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# file = open(\"data/IR-assignment-2-data.txt\", 'r')\n",
-    "# lines = file.readlines()\n",
-    "# query_url_pairs = []\n",
-    "# for idx, line in enumerate(lines):\n",
-    "#     line_toks = line.split()\n",
-    "#     qid = line_toks[1]\n",
-    "#     if(qid == 'qid:4'):\n",
-    "#         query_url_pair_idx = idx\n",
-    "#         relevance_label = int(line_toks[0])\n",
-    "#         query_url_pairs.append((query_url_pair_idx, relevance_label))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,12 +53,12 @@
     "    for lab in counts_by_relevance_label.keys():\n",
     "        num_max_dcg_files *= math.factorial(counts_by_relevance_label[lab])\n",
     "    \n",
-    "    return file_name, reverse_sorted_by_relevance, num_max_dcg_files"
+    "    return file_name, reverse_sorted_by_relevance, num_max_dcg_files, counts_by_relevance_label"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -127,11 +109,28 @@
     "file_path = \"data/IR-assignment-2-data.txt\"\n",
     "query_url_pairs = readData(file_path)\n",
     "num_data = len(query_url_pairs)\n",
-    "max_dcg_file_name, sorted_qu_pairs, num_max_dcg_files = make_max_dcg_file(query_url_pairs)\n",
+    "max_dcg_file_name, sorted_qu_pairs, num_max_dcg_files, counts_labels = make_max_dcg_file(query_url_pairs)\n",
     "p_values = [50, num_data]\n",
     "for p in p_values:\n",
     "    nDCG_p = compute_nDCG(query_url_pairs, sorted_qu_pairs, p)\n",
     "    print(f\"nDCG at {p if p==50 else 'whole dataset'} : {nDCG_p}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0: 59, 1: 26, 2: 17, 3: 1, 4: 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(counts_labels)"
    ]
   },
   {
@@ -143,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
