--- a/Q1.ipynb
+++ b/Q1.ipynb
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,9 +432,9 @@
     "        for i in range(document_scores.shape[0]):\n",
     "            document_id_to_score[i] = document_scores[i][0]\n",
     "        document_id_to_score = dict(sorted(document_id_to_score.items(), key=lambda item: item[1], reverse=True))\n",
-    "        top_5_doc_ids = list(document_id_to_score.keys())[:20]\n",
+    "        top_5_doc_ids = list(document_id_to_score.keys())[:5]\n",
     "        top_5_doc_names = getDocsFromID(docID_to_doc_mapping, top_5_doc_ids)\n",
-    "        for i in range(20):\n",
+    "        for i in range(5):\n",
     "            print(f\"{i} -> {top_5_doc_names[i]} | Score = {document_id_to_score[top_5_doc_ids[i]]}\")\n",
     "        print(\"-----------------------------------------------------------\")"
    ]
@@ -561,60 +561,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query : god is kind i am bad\n",
-      "Query tokens = ['god', 'kind', 'bad']\n",
+      "Query : good\n",
+      "Query tokens = ['good']\n",
       "\n",
       "\n",
       "---------------- Scheme : binary -------------------\n",
       "\n",
-      "0 -> aeonint.txt | Score = 1.3754518656592527\n",
-      "1 -> allusion | Score = 1.3754518656592527\n",
-      "2 -> basehead.txt | Score = 1.3754518656592527\n",
-      "3 -> bmdn01.txt | Score = 1.3754518656592527\n",
-      "4 -> bnbeg2.4.txt | Score = 1.3754518656592527\n",
+      "0 -> 1st_aid.txt | Score = 0.10409730823826448\n",
+      "1 -> abbott.txt | Score = 0.10409730823826448\n",
+      "2 -> acronyms.txt | Score = 0.10409730823826448\n",
+      "3 -> ads.txt | Score = 0.10409730823826448\n",
+      "4 -> adt_miam.txt | Score = 0.10409730823826448\n",
       "-----------------------------------------------------------\n",
       "\n",
       "---------------- Scheme : raw_count -------------------\n",
       "\n",
-      "0 -> mlverb.hum | Score = 24.99589984550271\n",
-      "1 -> quack26.txt | Score = 15.053181687808133\n",
-      "2 -> collected_quotes.txt | Score = 11.301877635862619\n",
-      "3 -> comic_st.gui | Score = 11.07527255309654\n",
-      "4 -> grail.txt | Score = 10.382706005862397\n",
+      "0 -> manners.txt | Score = 8.848271200252482\n",
+      "1 -> practica.txt | Score = 5.621254644866283\n",
+      "2 -> oldtime.sng | Score = 4.684378870721901\n",
+      "3 -> mlverb.hum | Score = 4.059795021292315\n",
+      "4 -> vegan.rcp | Score = 3.8516004048157857\n",
       "-----------------------------------------------------------\n",
       "\n",
       "---------------- Scheme : term_frequency -------------------\n",
       "\n",
-      "0 -> poopie.txt | Score = 0.009586019959848402\n",
-      "1 -> how2bgod.txt | Score = 0.00616506610670436\n",
-      "2 -> hierarch.txt | Score = 0.005767846461736768\n",
-      "3 -> modest.hum | Score = 0.005582931085734251\n",
-      "4 -> godmonth.txt | Score = 0.004424200410991271\n",
+      "0 -> oldtime.sng | Score = 0.007173627673387291\n",
+      "1 -> f_tang.txt | Score = 0.004053346515472245\n",
+      "2 -> popmach | Score = 0.0033579776851053057\n",
+      "3 -> bless.bc | Score = 0.0023658479145060108\n",
+      "4 -> beer.hum | Score = 0.0022986787308134113\n",
       "-----------------------------------------------------------\n",
       "\n",
       "---------------- Scheme : log_normalization -------------------\n",
       "\n",
-      "0 -> mlverb.hum | Score = 0.5049326551225903\n",
-      "1 -> quack26.txt | Score = 0.4141172949263572\n",
-      "2 -> humor9.txt | Score = 0.3704702399147544\n",
-      "3 -> collected_quotes.txt | Score = 0.346260477745901\n",
-      "4 -> practica.txt | Score = 0.33435009230723745\n",
+      "0 -> manners.txt | Score = 0.06062024096050611\n",
+      "1 -> practica.txt | Score = 0.05453672269832806\n",
+      "2 -> oldtime.sng | Score = 0.052104864881494094\n",
+      "3 -> mlverb.hum | Score = 0.05020281233363449\n",
+      "4 -> vegan.rcp | Score = 0.04950475004557565\n",
       "-----------------------------------------------------------\n",
       "\n",
       "---------------- Scheme : double_normalization -------------------\n",
       "\n",
-      "0 -> curse.txt | Score = 133740.73424723573\n",
-      "1 -> a_tv_t-p.com | Score = 133715.9882110537\n",
-      "2 -> strine.txt | Score = 133714.0829347897\n",
-      "3 -> growth.txt | Score = 133704.20379165796\n",
-      "4 -> turbo.hum | Score = 133704.06393210668\n",
+      "0 -> curse.txt | Score = 133740.40166561474\n",
+      "1 -> a_tv_t-p.com | Score = 133715.67273826225\n",
+      "2 -> strine.txt | Score = 133713.7630335622\n",
+      "3 -> growth.txt | Score = 133703.88595301862\n",
+      "4 -> turbo.hum | Score = 133703.70962464626\n",
       "-----------------------------------------------------------\n"
      ]
     }
