--- a/Q1_old.ipynb
+++ b/Q1_old.ipynb
@@ -188,7 +188,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "document_toks = read_file(file_paths)"
+    "document_toks = read_file(file_paths) #reading the files to collect tokens for all the documents"
    ]
   },
   {
@@ -197,11 +197,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#froming the total vocabulary using the individual document tokens\n",
     "vocabulary_set = set()\n",
     "for doc_tok in document_toks:\n",
     "    for tok in doc_tok:\n",
     "        vocabulary_set.add(tok)\n",
     "vocabulary_list = list(vocabulary_set)\n",
+    "\n",
+    "#creating term-id and id-term mapping\n",
     "id_to_term = {}\n",
     "term_to_id = {}\n",
     "for i in range(len(vocabulary_list)):\n",
@@ -216,36 +219,48 @@
    "outputs": [],
    "source": [
     "def compute_jaccard_coeff(query_toks, doc_toks):\n",
+    "    '''\n",
+    "        This function computes the Jaccard Coefficient of a Document and a Query given the document tokens and the query tokens.\n",
+    "    '''\n",
     "    query_tok_set = set(query_toks)\n",
     "    doc_toks_set = set(doc_toks)\n",
-    "    num_intersection = len(list(query_tok_set & doc_toks_set))\n",
-    "    num_union = len(list(query_tok_set | doc_toks_set))\n",
-    "    jaccard = num_intersection / num_union\n",
+    "    num_intersection = len(list(query_tok_set & doc_toks_set)) #intersection of document_tokens and query_tokens sets\n",
+    "    num_union = len(list(query_tok_set | doc_toks_set)) #union of document_tokens and query_tokens sets\n",
+    "    jaccard = num_intersection / num_union #calculating jaccard coefficient value\n",
     "    return jaccard\n",
     "\n",
     "def perform_jaccard_scoring(query_toks, document_toks):\n",
+    "    '''\n",
+    "        Calculates the Jaccard coefficient between a query and all the documents in our dataset. \n",
+    "    '''\n",
     "    jaccard_coeff_values = {}\n",
     "    for i in range(len(document_toks)):\n",
-    "        jaccard_coeff_i = compute_jaccard_coeff(query_toks, document_toks[i])\n",
+    "        jaccard_coeff_i = compute_jaccard_coeff(query_toks, document_toks[i]) #calculate jaccard coefficient value b/w query and i_th document\n",
     "        jaccard_coeff_values[i] = jaccard_coeff_i\n",
     "    return jaccard_coeff_values\n",
     "\n",
     "def get_relevant_by_jaccard(jaccard_coeff_values):\n",
-    "    ranked_order_by_jaccard = dict(sorted(jaccard_coeff_values.items(), key=lambda item: item[1], reverse=True))\n",
-    "    top_5_docID = list(ranked_order_by_jaccard.keys())[:5]\n",
-    "    top_5_jaccard = list(ranked_order_by_jaccard.values())[:5]\n",
+    "    '''\n",
+    "        This function gives the top 5 relevant documents (IDs and Jaccard coefficient values) based on the value of the Jaccard coefficient.\n",
+    "    '''\n",
+    "    ranked_order_by_jaccard = dict(sorted(jaccard_coeff_values.items(), key=lambda item: item[1], reverse=True)) #sort in descending order based on the value of Jaccard coefficient\n",
+    "    top_5_docID = list(ranked_order_by_jaccard.keys())[:5] #take top 5 document IDs from the descending sorted dictionary\n",
+    "    top_5_jaccard = list(ranked_order_by_jaccard.values())[:5] #take corresponding top 5 Jaccard coefficient values from the descending sorted dictionary\n",
     "    return top_5_docID, top_5_jaccard\n",
     "\n",
     "def run_jaccard(query, document_toks):\n",
-    "    query_toks = cleanQuery(query)\n",
-    "    if(len(query_toks) == 0):\n",
+    "    '''\n",
+    "        This function is used to run the whole process.\n",
+    "    '''\n",
+    "    query_toks = cleanQuery(query) #cleaning (preprocessing and tokenizing) the query\n",
+    "    if(len(query_toks) == 0): #if the number of query tokens remaining after preprocessing is zero\n",
     "        print(\"no. of query tokens after preprocessing is 0. Jaccard coefficient with all documents is equal to 0\")\n",
     "        for i in range(5):\n",
     "            print(f\"{i + 1} : {docID_to_doc_mapping[i]} (0)\") \n",
-    "    jaccard_scores = perform_jaccard_scoring(query_toks, document_toks)\n",
+    "    jaccard_scores = perform_jaccard_scoring(query_toks, document_toks) #calculate the Jaccard coefficient between a query and all the documents in our dataset\n",
     "    # print(jaccard_scores)\n",
-    "    top_5_doc_ids, top_5_jaccard_score = get_relevant_by_jaccard(jaccard_scores)\n",
-    "    top_5_doc_names = getDocsFromID(docID_to_doc_mapping, top_5_doc_ids)\n",
+    "    top_5_doc_ids, top_5_jaccard_score = get_relevant_by_jaccard(jaccard_scores) #get the top 5 relevant documents (IDs and Jaccard coefficient values) based on the value of the Jaccard coefficient.\n",
+    "    top_5_doc_names = getDocsFromID(docID_to_doc_mapping, top_5_doc_ids) #get document names from their IDs\n",
     "    print(f\"Query Text = {query}\")\n",
     "    print(f\"Query tokens after preprocessing = {query_toks}\")\n",
     "    print(f\"Top 5 relevant documents based on the value of the Jaccard coefficient : \")\n",
@@ -259,25 +274,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# run_jaccard(\"adjpasdps dalsdnal alsndlandl\", document_toks)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(array([1, 2, 3, 4, 5]), array([3, 3, 1, 2, 1], dtype=int64))\n"
-     ]
-    }
-   ],
-   "source": [
-    "# a = np.array([1, 2, 1, 2, 3, 4, 4, 5 ,1, 2])\n",
-    "# print(np.unique(a, return_counts=True))"
    ]
   },
   {
@@ -557,6 +555,30 @@
    ],
    "source": [
     "np.array(tf_idf_matrix_dict['binary']).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_question1():\n",
+    "    method_to_run = int(input(\"Enter 1 -> Jaccard scoring ; 2 -> TF-IDF : \"))\n",
+    "    if(method_to_run == 1):\n",
+    "        query_input_text = input(\"Input query text\")\n",
+    "        if(query_input_text == \"\"):\n",
+    "            print(\"Empty Query !!\")\n",
+    "            return\n",
+    "        else:\n",
+    "            run_jaccard(query_input_text, document_toks)\n",
+    "    else:\n",
+    "        query_input_text = input(\"Input query text\")\n",
+    "        if(query_input_text == \"\"):\n",
+    "            print(\"Empty Query !!\")\n",
+    "            return\n",
+    "        else:\n",
+    "            process_tf_idf_query(query_input_text, tf_idf_matrix_dict, term_idfs, len(vocabulary_list))\n"
    ]
   },
   {
