--- a/Q2/Q2.ipynb
+++ b/Q2/Q2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,13 +13,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "def readData(file_path):\n",
-    "    file = open(file_path, 'r')\n",
-    "    lines = file.readlines()\n",
+    "    '''\n",
+    "        This function reads the data from the data text file and converts it into an array of 3-size tuples where first element is the index of the data sample (sample no.),\n",
+    "        second is the relevance score/label and third is the actual data sample. \n",
+    "    '''\n",
+    "    file = open(file_path, 'r') #open data file\n",
+    "    lines = file.readlines() #read data file\n",
     "    query_url_pairs = []\n",
     "    for idx, line in enumerate(lines):\n",
     "        line_toks = line.split()\n",
@@ -34,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +110,7 @@
     }
    ],
    "source": [
-    "file_path = \"data/IR-assignment-2-data.txt\"\n",
+    "file_path = \"../data/IR-assignment-2-data.txt\"\n",
     "query_url_pairs = readData(file_path)\n",
     "num_data = len(query_url_pairs)\n",
     "max_dcg_file_name, sorted_qu_pairs, num_max_dcg_files, counts_labels = make_max_dcg_file(query_url_pairs)\n",
@@ -118,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -142,11 +146,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# query_url_pairs[0][2].split()[76].split(':')[1]\n",
     "qu_pairs_with_tf_idf_sum = []\n",
     "for qu_pair in query_url_pairs:\n",
     "    sum_tf_idf_doc = float(qu_pair[2].split()[76].split(':')[1])\n",
@@ -155,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
