--- a/Q1/Q1.ipynb
+++ b/Q1/Q1.ipynb
@@ -38,7 +38,8 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
-    "import pickle"
+    "import pickle\n",
+    "import math"
    ]
   },
   {
@@ -332,7 +333,7 @@
     "    '''\n",
     "    term_idf = {}\n",
     "    for term in term_df.keys(): #iterate over all the terms\n",
-    "        idf_value = np.log10(num_total_docs / (term_df[term] + 1)) #Using formula IDF(word)=log(total no. of documents/document frequency(word)+1) [with 1-smoothing]\n",
+    "        idf_value = math.log10(num_total_docs / (term_df[term] + 1)) #Using formula IDF(word)=log(total no. of documents/document frequency(word)+1) [with 1-smoothing]\n",
     "        term_idf[term] = idf_value\n",
     "    return term_idf\n",
     "\n",
@@ -362,7 +363,7 @@
     "            return 0\n",
     "    elif(scheme == \"log_normalization\"): #if scheme is log_normalization\n",
     "        if(term in doc_tfs.keys()): #if term is present in the document\n",
-    "            return np.log10(1 + doc_tfs[term])\n",
+    "            return math.log10(1 + doc_tfs[term])\n",
     "        else: #if term is not present in the document\n",
     "            return 0\n",
     "    elif(scheme == \"double_normalization\"): #if scheme is double_normalization\n",
@@ -461,7 +462,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1133/1133 [02:30<00:00,  7.51it/s]\n"
+      "100%|██████████| 1133/1133 [02:26<00:00,  7.73it/s]\n"
      ]
     },
     {
@@ -475,7 +476,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1133/1133 [02:34<00:00,  7.35it/s]\n"
+      "100%|██████████| 1133/1133 [03:01<00:00,  6.24it/s]\n"
      ]
     },
     {
@@ -489,7 +490,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1133/1133 [03:15<00:00,  5.78it/s]\n"
+      "100%|██████████| 1133/1133 [04:43<00:00,  3.99it/s]\n"
      ]
     },
     {
@@ -503,7 +504,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1133/1133 [02:43<00:00,  6.95it/s]\n"
+      "100%|██████████| 1133/1133 [03:00<00:00,  6.29it/s]\n"
      ]
     },
     {
@@ -517,7 +518,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1133/1133 [02:44<00:00,  6.88it/s]\n"
+      "100%|██████████| 1133/1133 [02:45<00:00,  6.84it/s]\n"
      ]
     }
    ],
@@ -562,76 +563,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "run_question1()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Query : good\n",
-      "Query tokens = ['good']\n",
+      "Query : daily music television show with guests\n",
+      "Query tokens = ['daily', 'music', 'television', 'show', 'guests']\n",
       "\n",
       "\n",
       "---------------- Scheme : binary -------------------\n",
       "\n",
-      "0 -> 1st_aid.txt | Score = 0.10409730823826448\n",
-      "1 -> abbott.txt | Score = 0.10409730823826448\n",
-      "2 -> acronyms.txt | Score = 0.10409730823826448\n",
-      "3 -> ads.txt | Score = 0.10409730823826448\n",
-      "4 -> adt_miam.txt | Score = 0.10409730823826448\n",
+      "0 -> aboutada.txt | Score = 5.609447474807025\n",
+      "1 -> humor9.txt | Score = 5.609447474807025\n",
+      "2 -> manners.txt | Score = 5.609447474807025\n",
+      "3 -> mlverb.hum | Score = 5.609447474807025\n",
+      "4 -> prac3.jok | Score = 4.3994751937153165\n",
       "-----------------------------------------------------------\n",
       "\n",
       "---------------- Scheme : raw_count -------------------\n",
       "\n",
-      "0 -> manners.txt | Score = 8.848271200252482\n",
-      "1 -> practica.txt | Score = 5.621254644866283\n",
-      "2 -> oldtime.sng | Score = 4.684378870721901\n",
-      "3 -> mlverb.hum | Score = 4.059795021292315\n",
-      "4 -> vegan.rcp | Score = 3.8516004048157857\n",
+      "0 -> commword.hum | Score = 83.52918979620783\n",
+      "1 -> stuf10.txt | Score = 42.164217058141965\n",
+      "2 -> rns_ency.txt | Score = 33.53788147665669\n",
+      "3 -> manners.txt | Score = 32.57862467287218\n",
+      "4 -> sf-zine.pub | Score = 24.404957626233834\n",
       "-----------------------------------------------------------\n",
       "\n",
       "---------------- Scheme : term_frequency -------------------\n",
       "\n",
-      "0 -> oldtime.sng | Score = 0.007173627673387291\n",
-      "1 -> f_tang.txt | Score = 0.004053346515472245\n",
-      "2 -> popmach | Score = 0.0033579776851053057\n",
-      "3 -> bless.bc | Score = 0.0023658479145060108\n",
-      "4 -> beer.hum | Score = 0.0022986787308134113\n",
+      "0 -> popmusi.hum | Score = 0.01152692683820573\n",
+      "1 -> aboutada.txt | Score = 0.00908335100623879\n",
+      "2 -> phunatdi.ana | Score = 0.006301555924812982\n",
+      "3 -> commword.hum | Score = 0.006105934926623378\n",
+      "4 -> wedding.hum | Score = 0.005175802846099099\n",
       "-----------------------------------------------------------\n",
       "\n",
       "---------------- Scheme : log_normalization -------------------\n",
       "\n",
-      "0 -> manners.txt | Score = 0.06062024096050611\n",
-      "1 -> practica.txt | Score = 0.05453672269832806\n",
-      "2 -> oldtime.sng | Score = 0.052104864881494094\n",
-      "3 -> mlverb.hum | Score = 0.05020281233363449\n",
-      "4 -> vegan.rcp | Score = 0.04950475004557565\n",
+      "0 -> manners.txt | Score = 1.3452446077380436\n",
+      "1 -> humor9.txt | Score = 1.123603369506893\n",
+      "2 -> mlverb.hum | Score = 0.9892858659053676\n",
+      "3 -> aboutada.txt | Score = 0.9671380928130869\n",
+      "4 -> commword.hum | Score = 0.8697008802105075\n",
       "-----------------------------------------------------------\n",
       "\n",
       "---------------- Scheme : double_normalization -------------------\n",
       "\n",
-      "0 -> curse.txt | Score = 133740.40166561474\n",
-      "1 -> a_tv_t-p.com | Score = 133715.67273826225\n",
-      "2 -> strine.txt | Score = 133713.7630335622\n",
-      "3 -> growth.txt | Score = 133703.88595301862\n",
-      "4 -> turbo.hum | Score = 133703.70962464626\n",
+      "0 -> curse.txt | Score = 133741.77800315636\n",
+      "1 -> a_tv_t-p.com | Score = 133717.08233299002\n",
+      "2 -> strine.txt | Score = 133715.15514410735\n",
+      "3 -> growth.txt | Score = 133705.2622905602\n",
+      "4 -> turbo.hum | Score = 133705.0859621879\n",
       "-----------------------------------------------------------\n"
      ]
     }
    ],
    "source": [
-    "# input_query = input()\n",
-    "# process_tf_idf_query(input_query, tf_idf_matrix_dict, term_idfs, len(vocabulary_list))"
+    "run_question1()"
    ]
   }
  ],
