--- a/Q2/Q2.ipynb
+++ b/Q2/Q2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "    for idx, line in enumerate(lines):\n",
     "        line_toks = line.split()\n",
     "        qid = line_toks[1]\n",
-    "        if(qid == 'qid:4'):\n",
+    "        if(qid == 'qid:4'): #select the rows corresponding to qid:4\n",
     "            query_url_pair_idx = idx\n",
     "            relevance_label = int(line_toks[0])\n",
     "            data_row = line\n",
@@ -38,22 +38,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def make_max_dcg_file(query_url_pairs):\n",
-    "    reverse_sorted_by_relevance = sorted(query_url_pairs, key=lambda x: x[1], reverse=True)\n",
-    "    counts_by_relevance_label = {0 : 0, 1 : 0, 2 : 0, 3 : 0, 4 : 0}\n",
-    "    max_dcg_file_lines = []\n",
+    "    '''\n",
+    "        This function forms the file with the query-url pairs (samples) arrange in the order of max DCG. Returns the file name, \n",
+    "        the query-url pairs sorted in desending order, number of files having arrange of pairs with max DCG, counts of number of pairs wrt relevance labels\n",
+    "\n",
+    "    '''\n",
+    "    #Note the max DCG file will be the file having the query-url pairs sorted in decreasing order of relevance labels\n",
+    "    reverse_sorted_by_relevance = sorted(query_url_pairs, key=lambda x: x[1], reverse=True) #sort the query_url_pairs in descending order of relevance label\n",
+    "    counts_by_relevance_label = {0 : 0, 1 : 0, 2 : 0, 3 : 0, 4 : 0} #maintain the counts wrt each relevance label for tha dataset\n",
+    "    max_dcg_file_lines = [] #just to store the lines to write to file\n",
     "    for qpr in query_url_pairs:\n",
     "        counts_by_relevance_label[qpr[1]] += 1\n",
     "        max_dcg_file_lines.append(qpr[2])\n",
     "    file_name = \"max_dcg_file.txt\"\n",
-    "    # with open(file)\n",
     "    with open(file_name, 'w') as f:\n",
-    "        f.writelines(max_dcg_file_lines)\n",
-    "    num_max_dcg_files = 1\n",
+    "        f.writelines(max_dcg_file_lines) #write to file\n",
+    "    num_max_dcg_files = 1 #number of max DCG files is equal to product of factorials of the number of samples corresponding to each label\n",
     "    for lab in counts_by_relevance_label.keys():\n",
     "        num_max_dcg_files *= math.factorial(counts_by_relevance_label[lab])\n",
     "    \n",
@@ -62,29 +67,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_DCG(qu_pairs_data):\n",
-    "    dcg_value = qu_pairs_data[0][1]\n",
-    "    # print(len(qu_pairs_data))\n",
+    "    '''\n",
+    "        Calculate the DCG for a given arrangement of query-url pairs data\n",
+    "    '''\n",
+    "    dcg_value = qu_pairs_data[0][1] #initialize the dcg value with relevance label of the first data sample\n",
     "    for i in range(1, len(qu_pairs_data)):\n",
-    "        # print(i)\n",
-    "        dcg_value += (qu_pairs_data[i][1] / np.log2(i + 1))\n",
+    "        dcg_value += (qu_pairs_data[i][1] / math.log2(i + 1))\n",
     "    return dcg_value\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "def compute_nDCG(original_qu_pairs, sorted_qu_pairs, p):\n",
-    "    dcg_p = compute_DCG(original_qu_pairs[:p])\n",
-    "    idcg_p = compute_DCG(sorted_qu_pairs[:p])\n",
-    "    ncdg_p = dcg_p / idcg_p\n",
+    "    '''\n",
+    "        Calculate the nDCG for a given arrangement of query-url pairs data. Another input 'p' is for \n",
+    "    '''\n",
+    "    dcg_p = compute_DCG(original_qu_pairs[:p]) #DCG at p (for the first p samples)\n",
+    "    idcg_p = compute_DCG(sorted_qu_pairs[:p]) #IDCG at p (for the first p samples) which corresponds to effectively the DCG for the arrangement sorted in descending order of the relevance labels i.e the max dcg arrangement\n",
+    "    ncdg_p = dcg_p / idcg_p #formula for ncdg\n",
     "    return ncdg_p"
    ]
   },
@@ -97,13 +106,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Counts wrt labels: {0: 59, 1: 26, 2: 17, 3: 1, 4: 0}\n",
+      "No. of max DCG files : 19893497375938370599826047614905329896936840170566570588205180312704857992695193482412686565431050240000000000000000000000\n",
+      "\n",
       "nDCG at 50 : 0.3521042740324887\n",
       "nDCG at whole dataset : 0.5979226516897831\n"
      ]
@@ -111,30 +123,15 @@
    ],
    "source": [
     "file_path = \"../data/IR-assignment-2-data.txt\"\n",
-    "query_url_pairs = readData(file_path)\n",
-    "num_data = len(query_url_pairs)\n",
+    "query_url_pairs = readData(file_path) #reading the data\n",
+    "num_data = len(query_url_pairs) #number of samples (query-url pairs)\n",
     "max_dcg_file_name, sorted_qu_pairs, num_max_dcg_files, counts_labels = make_max_dcg_file(query_url_pairs)\n",
+    "print(f\"Counts wrt labels: {counts_labels}\")\n",
+    "print(f\"No. of max DCG files : {num_max_dcg_files}\\n\")\n",
     "p_values = [50, num_data]\n",
     "for p in p_values:\n",
     "    nDCG_p = compute_nDCG(query_url_pairs, sorted_qu_pairs, p)\n",
     "    print(f\"nDCG at {p if p==50 else 'whole dataset'} : {nDCG_p}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0: 59, 1: 26, 2: 17, 3: 1, 4: 0}\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(counts_labels)"
    ]
   },
   {
@@ -146,50 +143,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "qu_pairs_with_tf_idf_sum = []\n",
+    "qu_pairs_with_tf_idf_sum = [] #stores the query-url pair samples just as the previously stored pairs, just the value of feature 75 is also added to each 3 size tuple making it now 4-size tuple each\n",
     "for qu_pair in query_url_pairs:\n",
-    "    sum_tf_idf_doc = float(qu_pair[2].split()[76].split(':')[1])\n",
+    "    sum_tf_idf_doc = float(qu_pair[2].split()[76].split(':')[1]) #extracting value of feature 75\n",
     "    qu_pairs_with_tf_idf_sum.append((qu_pair[0], qu_pair[1], sum_tf_idf_doc, qu_pair[2]))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ranked_qu_pairs = sorted(qu_pairs_with_tf_idf_sum, key=lambda x : x[2], reverse=True)"
+    "ranked_qu_pairs = sorted(qu_pairs_with_tf_idf_sum, key=lambda x : x[2], reverse=True) #ranking based on value of feature 75 (sorted in descending order based on value of feature 75)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "precision_k = []\n",
-    "recall_k = []\n",
-    "relevant_at_k = 0\n",
-    "total_relevant = 0\n",
+    "precision_k = [] #precision values\n",
+    "recall_k = [] #recall values\n",
+    "relevant_at_k = 0 #number of relevant URL at 'k'\n",
+    "total_relevant = 0 #total number of relevant URLs overall\n",
     "for rqpr in ranked_qu_pairs:\n",
-    "    if(rqpr[1] != 0):\n",
+    "    if(rqpr[1] != 0): #non-zero relevance judgement value means a relevant URL\n",
     "        total_relevant += 1\n",
     "for i in range(len(ranked_qu_pairs)):\n",
-    "    if(ranked_qu_pairs[i][1] != 0):\n",
-    "        relevant_at_k += 1\n",
-    "    p_k = relevant_at_k / (i + 1)\n",
-    "    r_k = relevant_at_k / total_relevant\n",
+    "    if(ranked_qu_pairs[i][1] != 0): #if relevance judgement value is non-zero i.e doc is relevant \n",
+    "        relevant_at_k += 1 #increment the value of relevant URLs till k by one\n",
+    "    p_k = relevant_at_k / (i + 1) #precision formula [i+1 -> total URLs till now, relevant_at_k -> relevant URLs till now]\n",
+    "    r_k = relevant_at_k / total_relevant #recall formula\n",
     "    precision_k.append(p_k)\n",
     "    recall_k.append(r_k)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -206,11 +203,13 @@
     }
    ],
    "source": [
+    "#plotting code\n",
     "plt.plot(recall_k, precision_k)\n",
     "plt.ylabel(\"precision\")\n",
     "plt.xlabel(\"recall\")\n",
     "plt.title(\"Precision-Recall Curve\")\n",
-    "plt.show()"
+    "plt.savefig('Precision_Recall_Curve.png', bbox_inches='tight', facecolor='white')\n",
+    "plt.show()\n"
    ]
   }
  ],
