--- a/Q3/Q3.ipynb
+++ b/Q3/Q3.ipynb
@@ -54,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "random.seed(0)"
+    "# random.seed(0)"
    ]
   },
   {
@@ -123,32 +123,41 @@
     "    tok = ''.join(ch for ch in tok if ch != ' ')\n",
     "    return tok\n",
     "def preprocess(text):\n",
-    "\n",
+    "    '''\n",
+    "        Preprocess the file text and converting to word tokens\n",
+    "        Input: string File text\n",
+    "        Returns file_tokens, word tokens for the pre processed text\n",
+    "    '''\n",
+    "    #converting text to lowercase\n",
     "    text = text.lower()\n",
     "\n",
+    "    #Fixing the contractions\n",
     "    text = contractions.fix(text)\n",
     "\n",
+    "    #Performing word tokenization\n",
     "    all_tokens = word_tokenize(text)\n",
     "\n",
+    "    #Omitting all the non-alphanumeric characters in tokens\n",
     "    all_tokens = [check_alnum(tok) for tok in all_tokens]\n",
     "\n",
+    "    #removing stopwords\n",
     "    stop_words = list(set(stopwords.words('english')))\n",
-    "\n",
     "    all_tokens = [tok for tok in all_tokens if tok not in stop_words]\n",
     "\n",
+    "    #removing punctations if any remain\n",
     "    toks_no_punct = []\n",
     "    for tok in all_tokens:\n",
     "        ctok = remove_punct(tok)\n",
     "        if(ctok != \"\"):\n",
     "            toks_no_punct.append(ctok)\n",
     "\n",
+    "    #removing spaces in any remain\n",
     "    cleaned_toks = []\n",
     "    for tok in toks_no_punct:\n",
     "        ctok = remove_blank_space(tok)\n",
     "        if(ctok != \"\"):\n",
     "            cleaned_toks.append(ctok)\n",
-    "    # lemmatizer = nltk.WordNetLemmatizer()\n",
-    "    # final_tokens = [lemmatizer.lemmatize(tok) for tok in cleaned_toks]\n",
+    "    \n",
     "    final_tokens = [tok for tok in cleaned_toks]\n",
     "\n",
     "    return final_tokens\n"
