--- a/Q1/Q1.ipynb
+++ b/Q1/Q1.ipynb
@@ -533,8 +533,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_to_read = open(\"./tf_idf_matrices_q1.pkl\", \"rb\")\n",
-    "tf_idf_matrix_dict = pickle.load(file_to_read)"
+    "# file_to_read = open(\"./tf_idf_matrices_q1.pkl\", \"rb\")\n",
+    "# tf_idf_matrix_dict = pickle.load(file_to_read)"
    ]
   },
   {
